Edits with collision and spawning inside of something, new pet.js file nothing in it though

--- a/FBLA Project - Scrolling Tile Movement/index.html
+++ b/FBLA Project - Scrolling Tile Movement/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <canvas id="gameCanvas" width="800" height="600"></canvas>
-  <script src="script.js"></script>
+  <script src="pet.js"></script>
+  <script src="movement.js"></script>
 </body>
 </html>
