--- a/FBLA Project - Scrolling Tile Movement/index.html
+++ b/FBLA Project - Scrolling Tile Movement/index.html
@@ -6,10 +6,11 @@
   <title>Test Edit</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
 </head>
 <body>
   <canvas id="gameCanvas" width="800" height="600"></canvas>
-  <script src="pet.js"></script>
   <script src="movement.js"></script>
+  <script src="pet.js"></script>
 </body>
 </html>
