Unfinished; some changes with menu screens and stats

--- a/FBLA Project - Scrolling Tile Movement/index.html
+++ b/FBLA Project - Scrolling Tile Movement/index.html
@@ -5,9 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Test Edit</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
-</head>
+  <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&family=Play:wght@400;700&family=Press+Start+2P&display=swap" rel="stylesheet"></head>
 <body>
   <canvas id="gameCanvas" width="800" height="600"></canvas>
   <script src="movement.js"></script>
