--- a/FBLA Project - Scrolling Tile Movement/index.html
+++ b/FBLA Project - Scrolling Tile Movement/index.html
@@ -10,5 +10,6 @@
   <canvas id="gameCanvas" width="800" height="600"></canvas>
   <script src="movement.js"></script>
   <script src="pet.js"></script>
+  <div id="dayDisplay">Day 1</div>
 </body>
 </html>
